src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>VAT__c</fullName>
        <description>Shows the total amount of VAT for all invoice lines that has been applied to the Invoice</description>
        <inlineHelpText>The total amount of VAT for all invoice lines</inlineHelpText>
        <label>VAT</label>
        <summarizedField>Invoice_Line__c.VAT__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VT_Payment_Status__c</fullName>
        <formula>IF( TEXT(Invoice_Status__c) = &quot;Invalid&quot;, &quot;Invalid&quot;, IF(
AND(Unpaid_Amount__c != 0, Paid_Amount__c != 0),
&apos;Partially Paid&apos;, IF(Unpaid_Amount__c != 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_Amount__c</fullName>
        <formula>Total_Invoice_Value__c - Total_Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verify Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Rate_Applied__c</fullName>
        <formula>Order__r.Withholding_Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Withholding Tax Rate Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>